added java animation library